# motorsport_calendar_webserver

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  build_and_package.sh  config.yml  docker_config.yml  makefile  package.sh  run.sh
src/: .main.rs.swp  config.rs  main.rs  res.json  templates.rs  utils.rs  webserver.rs
static/: 500error.html  about.css  about.html  event_script.js  event_style.css  index.html  script.js  style.css
templates/: event.html.tera  index.html.tera
tests/: run_tests.sh  todo-spec.js
