[package]
name = "motorsport_calendar_webserver"
version = "0.1.0"
authors = ["Michael Ashe <mickjohnashe@hotmail.com>"]

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
# log = "0.3"
# env_logger = "0.3"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_yaml = "0.8.6"
serde_json = "1.0.32"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.7.2"
lazy_static = "0.2.7"
tera = "0.10.9"
hyper = "0.10.11"
clap = "2.23.1"

[dependencies.motorsport_calendar_common]
path = "/home/mick/Programs/rust/motorsport_calendar_common"

[dependencies.log]
path = "/home/mick/Programs/rust/third_party/log"

[dependencies.env_logger]
path = "/home/mick/Programs/rust/third_party/log/env"
