[package]
name = "motorsport_calendar_webserver"
version = "0.1.0"
authors = ["Michael Ashe <mickjohnashe@hotmail.com>"]

[dependencies]
rocket = "0.4.0"
env_logger = "0.4"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_yaml = "0.8.6"
serde_json = "1.0.32"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.7.2"
lazy_static = "0.2.7"
tera = "0.11.20"
hyper = "0.10.11"
clap = "2.23.1"

[dependencies.motorsport_calendar_common]
git = "https://github.com/mickjohn/motorsport_calendar_common.git"

[dependencies.log]
git = "https://github.com/mickjohn/log.git"
